# prunefiles-python

./: README.md  pyproject.toml
prunefiles/: __init__.py  __main__.py  app.py
