[tool.poetry]
name = "prunefiles"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"
readme = "README.md"
scripts = { prunefiles = "prunefiles.app:main" }
homepage = "https://github.com/Cologler/prunefiles-python"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.5"}
parse = "^1.20.2"
humanfriendly = "^10.0"



[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
